# ocaml-edt

./: edt.opam
lib/: comma.ml  comma.mli  day.ml  dune  timetable.ml
spec/: programGettext.ml  spec.ml
