opam-version: "2.0"
name: "edt"
version: "dev"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/ocaml-edt/"
bug-reports: "https://github.com/ghuysmans/ocaml-edt/issues"
dev-repo: "git+https://github.com/ghuysmans/ocaml-edt/"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {>= "2.7"}
  "csv"
  "icalendar"
  "cmdliner"
  "mdx"
  "gettext-camomile"
]
synopsis: "EDT CSV reader and iCalendar generator"
